overflow fix

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -17,6 +17,10 @@
 	font-style: normal;
 }
 
+body {
+	overflow-x: hidden;
+}
+
 a {
 	text-decoration: none;
 }
